# opicochat

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: release.yml
include/: common.hpp  config.hpp  crypto.hpp  protocol.hpp  utils.hpp  version.hpp.in
src/: client_main.cpp  common.cpp  config.cpp  crypto.cpp  opicochat.rc  opicochatserver.rc  protocol.cpp  server_main.cpp  utils.cpp
